# battlecode24

./: README.md  RELEASE_JAVA.md  RELEASE_PYTHON.md  build.gradle  ex-all-resources-map.txt  ex-bigger-map.txt  ex.txt  ex2.txt  ex_bad_spawn.txt  ex_deafault.txt  ex_test_currents.txt  ex_test_currents2.txt  gradle.properties  package-lock.json  package.json
.github/workflows/: release.yml
client/: .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
client/icons/: icon.icns
client/playback/: README.md  package-lock.json
client/src/: app-context.tsx  app-search-params.tsx  app.tsx  client-config.tsx  constants.ts
client/src-electron/: electron-bridge.js  electron-main.js
client/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
client/src-tauri/src/: main.rs  tauri_bridge.rs
client/visualizer/: README.md  electron-main.js  package-lock.json  package.json  visualizer.html  webpack.config.js
client2/: .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
client2/src/: app.tsx  (+9 more)
client2/src-electron/: electron-bridge.js  electron-main.js  electron-main.ts  electron-native-api.js  index.d.ts  preload.ts
engine/: build.gradle
maps/: AllElements.map23  CurrentTesting.map23  DefaultMap.map23  map.map24
schema/: README.md  battlecode.fbs  index.d.ts  index.js  index.ts  package-lock.json  package.json  tsconfig.json
specs/: specs.md.html
(+594 files in other folders)
